# alphapeptstats

./: .buildinfo  .bumpversion.cfg  .bumpversion.toml  .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  CITATION.cff  CLAUDE.md  Dockerfile  HISTORY.md  Introduction.html  MANIFEST.in  README.md  README.rst  Untitled.ipynb  bibliography.bib  data_preprocessing.html  functions.html  genindex.html  go_analysis.html  import_data.html  index.html  installation.html  objects.inv  package.Dockerfile  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.html  ruff-lint-strict.toml  search.html  searchindex.js  settings.ini  setup.py  setup.spec  workflow_example.html
.doctrees/: Introduction.doctree  data_preprocessing.doctree  environment.pickle  functions.doctree  go_analysis.doctree  import_data.doctree  index.doctree  installation.doctree  requirements_docs.doctree  workflow_example.doctree
.github/: dependabot.yml
.streamlit/: config.toml  secrets.toml
_modules/: index.html
_sources/: Introduction.md.txt  data_preprocessing.md.txt  functions.rst.txt  go_analysis.md.txt  index.rst.txt  installation.md.txt  requirements_docs.txt
alphastats/: AlphaStats.py  DOCKERFILE  DataSet.py  DataSet_Pathway  DataSet_Pathway.py  DataSet_Plot.py  DataSet_Preprocess.py  DataSet_Statistics.py  _DataSet_Plot.py  _DataSet_Preprocess.py  _DataSet_Statistics.py  __init__.py  __main__.py  cli.py  dataset_factory.py  dataset_harmonizer.py  keys.py  load_data.py  normalization.py  proteinObject.py  test.py  utils.py
api_reference/: dataset.html  index.html  loader.html
docs/: Introduction.html  Introduction.md  conf.py  context.html  customize_figures.html  data_preprocessing.html  data_preprocessing.md  functions.html  functions.rst  genindex.html  go_analysis.md  import_data.html  import_data.md  index.html  index.rst  installation.html  installation.md  objects.inv  plots.html  py-modindex.html  references.html  requirements_docs.txt  search.html  searchindex.js  workflow.html  workflow_example.rst  workflow_goanalysis.ipynb  workflow_maxquant.html  workflow_maxquant.ipynb  workflow_mq.html
misc/: CLA.md  bumpversion.cfg  check_version.sh  contaminations.txt  loose_pip_install.sh  stable_pip_install.sh
nbs/: getting_started.ipynb  liu_2019.ipynb  llm_as_judge.ipynb  ramus_2016.ipynb  tutorial.ipynb
requirements/: requirements.txt  requirements_development.txt  requirements_gui.txt
tests/: .coverage  (+12 more)
(+307 files in other folders)
